# tm

./: README.md  pyproject.toml
data/: real_estate.csv  shap_values.pickle  weather.csv
notebooks/: 0. Introduction.ipynb  1.1. A Simple Estimation Problem.ipynb  1.2. Linear Regression.ipynb  1.3. Basis Functions and Feature Engineering.ipynb  1.4. Categorical Values and Logistic Regression.ipynb  1.5. Regularization.ipynb  2.1. Decision Tree Learning.ipynb  2.2. Regression Trees and Overfitting.ipynb  2.3. DT Ensembles.ipynb  3.1. Introduction to Neural Networks.ipynb  3.2. Deep Learning.ipynb  UC01. Anomaly Detection in Taxi Calls.ipynb  UC02.1. RUL Based Maintenance.ipynb  UC02.2. Probabilistic RUL Estimation.ipynb  UC03. Kidney Paired Donation.ipynb  UC04. Click-Through Rate Prediction .ipynb  UC05. Digit Recognition.ipynb  UC06. Mitigating Discrimination in Machine Learning.ipynb  UC07.1. Emergency Deparment Arrivals.ipynb  UC07.2. Arrival Prediction via Neuro-Probabilistic Models.ipynb  UC08.1. Anomaly Detection in HPC Centers.ipynb  UC08.2. Autoencoders for Anomaly Detection.ipynb
notebooks/old/: 06. Domain Knowledge in Click-Through Rate Prediction.ipynb  08. Emergency Deparment Arrivals.ipynb  09. Biomedical Data Analysis.ipynb
notebooks/util/: util_ctrp.py  util_pm.py
