[tool.poetry]
name = "lectures"
version = "0.1.0"
description = ""
authors = ["Michele Lombardi <michele.lombardi2@unibo.it>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
notebook = "^6"
typing-extensions = "^4.12.2"
matplotlib = "^3"
scikit-learn = "^1.5.1"
ortools = "9.8.3296"
pydot = "^3.0.1"
tensorflow = "^2.17.0"
tensorflow-lattice = "^2.1.1"
tensorflow-probability = "^0.24.0"
pandas = "2.1"
seaborn = "^0.13.2"
shap = "^0.46.0"
xgboost = "2.0.3"
rise = "^5.7.1"
bayesian-optimization = "^2.0.3"
tf-keras = "^2.18.0"
numpy = "^1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
